[project]
name = "mas-study"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.10.1",
    "browser-use-sdk>=2.0.7",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "mcp[cli]>=1.14.1",
    "openai>=1.105.0",
    "playwright>=1.56.0",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "transformers>=4.56.1",
    "uvicorn[standard]>=0.35.0",
]
